Updated fonts and cards where description was null

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 
                 
             </div>
-            <div class="owner-content ">
-                <div class="owner-name"></div>
+            <div class="owner-content poppins">
+                <div class="owner-name poppins f-600"></div>
                 <div >UserName: <span class="owner-username"> </span></div>
                 <div> Followers: <span class="owner-follower" ></span></div>
                 <div> <i class="bi bi-geo-alt-fill"></i> <span class="owner-location"></span></div>
@@ -43,7 +43,7 @@
     </section>
     <section class="repositories toggle">
         <div class="repo-container">
-            <div class="repo-header"><span>Repositories</span>   
+            <div class="repo-header poppins f-600"><span>Repositories</span>   
                 <div class="entries"><label for="entries">Repo per page: </label>
                     <select id="entry-per-page" >
                         <option value="10" selected >10</option>
